hb-layout-inline has been finished

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>hb-layout-floats</title>
+    <title>hb-layout-inline</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>hb-layout-float</h1>
+<header>
+    <h1>hb-layout-grid</h1>
+</header>
+<div class="container">
+    <section class="section-1">
+        <article class="space-right space-bottom"></article>
+        <article></article>
+    </section>
+    <section class="section-2">
+        <article class="space-right space-bottom"></article>
+        <article class="space-right space-bottom"></article>
+        <article></article>
+    </section>
+    <footer>
+        <article></article>
+    </footer>
+</div>
 </body>
+
 </html>
