--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <header>
-    <h1>hb-layout-grid</h1>
+    <h1>hb-layout-inline</h1>
 </header>
 <div class="container">
     <section class="section-1">
